# OpenCV-CMake-Template

./: CMakeLists.txt
include/: hello.h
src/: hello.cpp  main.cpp
